[tool.poetry]
name = "hackathon"
version = "0.1.0"
description = ""
authors = ["scripthound <grinkiko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
couchdb = "^1.2"
python-dotenv = "^1.0.1"
torchvision = "^0.18.1"
torch = "^2.3.1"
opencv-python = "^4.10.0.82"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
